# ml-tabular

./: .env.example  .gitignore  DATA_CARD.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml  logging.yaml  paths.yaml
configs/data/: bank_marketing.yaml
configs/eval/: defaults.yaml
configs/model/: lightgbm.yaml  xgboost.yaml
configs/train/: defaults.yaml
src/: settings.py
src/api/: app.py  load_model.py  schemas.py
src/data/: download.py  features.py  prepare.py  split.py
src/models/: calibrate.py  explain.py  metrics.py  predict.py  register.py  train.py
src/pipelines/: evaluate_pipeline.py  train_pipeline.py
src/utils/: io.py  logging.py  schema.py  timing.py
tests/: test_api.py  test_features.py  test_train.py
